fix weird canvas issue on mobile

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -345,9 +345,12 @@ hr {
   position: fixed;
   top: 0;
   left: 0;
+  right: 0;
+  bottom: 0;
   width: 100%;
   height: 100%;
   z-index: 0;
+  touch-action: none;
 }
 
 .site-header,
